# emdb-rs

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml
.github/workflows/: ci.yml
benches/: comparative.rs  concurrency.rs  concurrent_reads.rs  group_commit.rs  index_hotpath.rs  kv.rs  lmdb_style.rs  persistence.rs  transactions.rs  write_through.rs
docs/: API.md  ARCHITECTURE.md  BENCH.md  EXAMPLES.md  PERFORMANCE.md  PLATFORM-NOTES.md  STABILITY-1.0.md
examples/: async_basics.rs  basic.rs  bulk_load.rs  encryption.rs  group_commit.rs  namespaces.rs  range_scan.rs  smoke.rs  streaming.rs  transactions.rs  ttl_cache.rs  zero_copy.rs
src/: async_impl.rs  bloom.rs  builder.rs  compress.rs  data_dir.rs  db.rs  encryption.rs  encryption_admin.rs  error.rs  index.rs  keymap.rs  lib.rs  lockfile.rs  namespace.rs  nested.rs  page_cache.rs  stats.rs  transaction.rs  ttl.rs  value_cache.rs  value_ref.rs
src/storage/: codec.rs  engine.rs  file.rs  flush.rs  format.rs  fxhash.rs  index.rs  memory.rs  meta.rs  migrate.rs  mod.rs  page_store.rs  store.rs  wal.rs
src/storage/page/: btree.rs  free_list.rs  header.rs  mmap.rs  mod.rs  pager.rs  rid.rs  slotted.rs  value.rs
src/storage/v4/: catalog.rs  engine.rs  io.rs  migrate.rs  mod.rs  store.rs  wal.rs
tests/: async_api.rs  basic.rs  checkpoint.rs  compact.rs  concurrency.rs  crash_recovery.rs  decoder_robustness.rs  edge_cases.rs  encryption_admin.rs  features.rs  flush_policy.rs  format.rs  hash_regression.rs  index_stress.rs  loom_tests.rs  migration.rs  namespace_ttl.rs  namespaces.rs  nested.rs  page_format.rs  persistence.rs  range_scans.rs  recovery.rs  storage_path.rs  transaction_rollback.rs  transactions.rs  ttl.rs  v0_8_5_features.rs  v4_compact.rs  v4_namespaces.rs  v4_public_api.rs  zerocopy.rs
