[package]
name = "emdb"
version = "0.7.1"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "A lightweight, high-performance embedded database for Rust."

keywords = [
    "database",
    "embedded",
    "storage",
    "kv",
    "db"
]

categories = [
    "database",
    "database-implementations",
    "data-structures",
    "caching"
]

documentation = "https://docs.rs/emdb"
repository = "https://github.com/jamesgober/emdb-rs"
homepage = "https://github.com/jamesgober/emdb-rs"

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crc32fast = "1.4"
fs4 = "0.8"
# Memory-mapped reads on every platform. mmap is the foundation of the
# storage engine — no longer feature-gated.
memmap2 = "0.9"
# Optional at-rest AES-256-GCM encryption.
aes-gcm = { version = "0.10", optional = true, default-features = false, features = ["aes", "alloc"] }
# ChaCha20-Poly1305 AEAD as an alternative to AES-GCM.
chacha20poly1305 = { version = "0.10", optional = true, default-features = false, features = ["alloc"] }
# Cryptographically-secure RNG for AEAD nonces.
rand_core = { version = "0.6", optional = true, default-features = false, features = ["getrandom"] }
# Argon2id KDF for passphrase-derived keys.
argon2 = { version = "0.5", optional = true, default-features = false, features = ["alloc"] }
# Comparative-bench peers (dev convenience, not for production users).
redb = { version = "2.1", optional = true }
redis = { version = "0.27", optional = true }
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.22", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
fastrand = "2"

[features]
default = ["ttl"]
ttl = []
nested = []
# AES-256-GCM + ChaCha20-Poly1305 at-rest encryption with raw-key or
# Argon2id-derived passphrase. Activates the
# `EmdbBuilder::encryption_key`/`encryption_passphrase` APIs.
encrypt = ["dep:aes-gcm", "dep:rand_core", "dep:argon2", "dep:chacha20poly1305"]
bench-compare = ["dep:redb", "dep:sled"]
bench-redis = ["dep:redis"]
bench-rocksdb = ["dep:rocksdb"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "kv"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "concurrent_reads"
harness = false

[[bench]]
name = "lmdb_style"
harness = false
required-features = ["ttl", "bench-compare"]

[[example]]
name = "smoke"
required-features = ["ttl", "nested", "encrypt"]
