[package]
name = "emdb"
version = "0.9.8"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <me@jamesgober.com>"
]

description = "Lightweight, high-performance embedded key-value database. Bitcask-style append-only journal, lock-free sharded hash index, at-rest encryption, sync + async APIs with streaming iterators."

keywords = [
    "database",
    "embedded",
    "key-value",
    "kv",
    "storage"
]

categories = [
    "database",
    "database-implementations",
    "data-structures",
    "caching"
]

documentation = "https://docs.rs/emdb"
repository = "https://github.com/jamesgober/emdb-rs"
homepage = "https://github.com/jamesgober/emdb-rs"

# Configuration for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Filesystem IO substrate — provides the journal primitive (lock-free
# append, group-commit fsync, NVMe passthrough flush, io_uring on
# Linux), atomic-replace `write_copy` for sidecar metadata updates,
# and hardware-aware durability method dispatch via `Method::Auto`.
# emdb's storage layer wraps fsys's `JournalHandle` for the write
# path; the read path keeps its own mmap over the journal file for
# zero-copy lookups.
fsys = "0.9.8"
crc32fast = "1.4"
fs4 = "0.8"
# Memory-mapped reads on every platform. mmap is the foundation of the
# storage engine — no longer feature-gated.
memmap2 = "0.9"
# parking_lot — adaptive-spin + futex-backed `RwLock` / `Mutex` with no
# poisoning and substantially lower acquire/release cost than the
# `std::sync` equivalents. Replaces every `std::sync::{RwLock, Mutex}`
# in the hot index + storage paths. Already pulled in transitively
# through fsys; declared directly so emdb can pin it independently.
parking_lot = "0.12"
# crossbeam-skiplist — lock-free concurrent ordered map. Backs the
# optional `range_index` (sorted secondary index for `Emdb::range`).
# Replaces `RwLock<BTreeMap>`, which globally serialised every range
# scan against every insert; SkipMap allows concurrent inserts and
# concurrent range iteration with no lock contention.
crossbeam-skiplist = "0.1"
# crossbeam-utils — `CachePadded<T>` for false-sharing elimination on
# the hot atomics (per-namespace `record_count`, `Store::mmap_len`).
# Already pulled in transitively through fsys.
crossbeam-utils = { version = "0.8", default-features = false }
# Optional at-rest AES-256-GCM encryption.
aes-gcm = { version = "0.10", optional = true, default-features = false, features = ["aes", "alloc"] }
# ChaCha20-Poly1305 AEAD as an alternative to AES-GCM.
chacha20poly1305 = { version = "0.10", optional = true, default-features = false, features = ["alloc"] }
# Cryptographically-secure RNG for AEAD nonces.
rand_core = { version = "0.6", optional = true, default-features = false, features = ["getrandom"] }
# Argon2id KDF for passphrase-derived keys.
argon2 = { version = "0.5", optional = true, default-features = false, features = ["alloc"] }
# Memory-zeroing wrappers for key material. Already present
# transitively via aes-gcm; declared explicitly here so the
# encryption-path source can wrap raw key bytes in `Zeroizing` and
# the dep is enforced rather than incidental.
zeroize = { version = "1", optional = true, default-features = false }
# Comparative-bench peers (dev convenience, not for production users).
redb = { version = "2.1", optional = true }
redis = { version = "0.27", optional = true }
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.22", optional = true }
# Tokio runtime — gated behind the `async` feature flag. The async
# surface (`AsyncEmdb`, `AsyncNamespace`, `EmdbBuilder::build_async`)
# routes every blocking emdb call through `tokio::task::spawn_blocking`
# so the runtime's async tasks never block on emdb's sync I/O.
# Feature set: `rt` + `rt-multi-thread` for `spawn_blocking`,
# `macros` for `#[tokio::test]`. We deliberately do NOT pull in
# `fs` — emdb's I/O goes through fsys, not tokio::fs.
tokio = { version = "1", optional = true, default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync"] }
# `Stream` adapter for tokio mpsc channels — backs the streaming
# variants of the async iteration surface
# (`AsyncEmdb::iter_stream` / `keys_stream` / `range_stream` /
# `iter_from_stream` / `iter_after_stream`). Without this, async
# users had to eagerly collect entire iterations into a `Vec`
# before processing; `0.1` is dep-light (~200 LOC, no transitive
# bloat beyond `futures-core`).
tokio-stream = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
fastrand = "2"
# Async tests need a full tokio runtime under #[tokio::test] + the
# `StreamExt::next` adapter for stream-test ergonomics. Pulled in
# unconditionally for dev so the async integration tests can
# compile under any feature set that enables `async`.
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", default-features = false }
futures-util = { version = "0.3", default-features = false }

[features]
default = ["ttl"]
ttl = []
nested = []
# AES-256-GCM + ChaCha20-Poly1305 at-rest encryption with raw-key or
# Argon2id-derived passphrase. Activates the
# `EmdbBuilder::encryption_key`/`encryption_passphrase` APIs.
encrypt = ["dep:aes-gcm", "dep:rand_core", "dep:argon2", "dep:chacha20poly1305", "dep:zeroize"]
# Async surface — `AsyncEmdb` / `AsyncNamespace` plus
# `EmdbBuilder::build_async`. Wraps the sync API in
# `tokio::task::spawn_blocking` so async runtimes don't stall on
# emdb's blocking I/O. Opt-in: programs that don't use async pay no
# tokio dep cost.
async = ["dep:tokio", "dep:tokio-stream"]
bench-compare = ["dep:redb", "dep:sled"]
bench-redis = ["dep:redis"]
bench-rocksdb = ["dep:rocksdb"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "kv"
harness = false

[[bench]]
name = "comparative"
harness = false

[[bench]]
name = "concurrent_reads"
harness = false

[[bench]]
name = "index_hotpath"
harness = false

[[bench]]
name = "group_commit"
harness = false
required-features = ["ttl"]

[[bench]]
name = "write_through"
harness = false
required-features = ["ttl"]

[[bench]]
name = "lmdb_style"
harness = false
required-features = ["ttl", "bench-compare"]

[[example]]
name = "smoke"
required-features = ["ttl", "nested", "encrypt"]

[[example]]
name = "ttl_cache"
required-features = ["ttl"]

[[example]]
name = "encryption"
required-features = ["encrypt"]

[[example]]
name = "async_basics"
required-features = ["async"]

[[example]]
name = "streaming"
required-features = ["async", "ttl"]
